# Python_Arbeit

./: .gitignore  README.md  Starface_Notizen.py  ovpn.py  pyproject.toml
.github/workflows/: ci.yml
config/: internal_users.json
src/: ovpn_builder.py  starface_notifier.py
tests/: conftest.py  test_ovpn_builder.py  test_starface_notifier.py
