[project]
name = "python-arbeit"
version = "0.1.0"
description = "Work utility scripts: OpenVPN config builder and Starface phone integration"
requires-python = ">=3.11"
dependencies = [
    "cryptography>=42.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-mock>=3.12",
    "ruff>=0.4",
    "mypy>=1.10",
    "cryptography>=42.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "S", "B", "A", "C4", "PT"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "S105", "S108"]

[tool.mypy]
strict = true
python_version = "3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
